# my-awesome-engine

./: .clang-format  .gitignore  .gitlab-ci.yml  04-02-triangle.ppm  CMakeLists.txt  Dockerfile  readme.md  tests.py  vertex.ppm
01-hello-lib/: CMakeLists.txt  tests.py
01-hello-lib/lib/: CMakeLists.txt
01-hello-lib/lib/src/: hello.cpp
01-tetris-main/: CMakeLists.txt
01-tetris-main/data/shaders/: triangle.vert
01-tetris-main/data/textures/: square.coord
01-tetris-main/engine/include/: shaders.hpp
01-tetris-main/engine/src/: engine.cpp
01-tetris-main/game/src/: J.cpp  S.cpp  T.cpp  tetris.cpp
01-tetris-main/openGL/src/: glad.c
02-sdl-link/: CMakeLists.txt
02-sdl-link/src/: main.cpp
03-engine-loop/: CMakeLists.txt
03-engine-loop/engine/include/: engine.hpp
03-engine-loop/engine/src/: engine.cpp
03-engine-loop/game/: game.cpp
04-opengl-basic/: CMakeLists.txt
04-opengl-basic/data/shaders/: triangle.frag
04-opengl-basic/engine/include/: engine.hpp  openGL.hpp  shaders.hpp  stb_image.h
04-opengl-basic/engine/src/: engine.cpp  shaders.cpp
04-opengl-basic/game/: main.cpp
04-opengl-basic/game/include/: pieces.hpp  state.hpp  tetris.hpp  types.hpp
04-opengl-basic/game/src/: I.cpp  J.cpp  L.cpp  O.cpp  S.cpp  T.cpp  Z.cpp  pieces.cpp  tetris.cpp  types.cpp
04-opengl-basic/matrix/include/: matrix.hpp
04-opengl-basic/matrix/src/: matrix.cpp
04-opengl-basic/openGL/include/: glad.h  khrplatform.h
04-render-basic/: CMakeLists.txt
04-render-basic/04-01-lines/lib/include/: ppm.hpp
04-render-basic/04-01-lines/lib/src/: bresenham.cpp  ppm.cpp
04-render-basic/04-02-triangle/lib/include/: renderer.hpp  triangle_utils.hpp
04-render-basic/04-02-triangle/lib/src/: renderer.cpp
04-render-basic/04-03-vertex/: CMakeLists.txt
04-render-basic/04-03-vertex/driver_code/: main.cpp
04-render-basic/04-03-vertex/lib/include/: renderer.hpp  triangle_utils.hpp
04-render-basic/04-03-vertex/lib/src/: renderer.cpp
04-render-basic/04-04-interpolated/: CMakeLists.txt
04-render-basic/04-05-sdl-render/: CMakeLists.txt
04-render-basic/driver_code/: main.cpp
04-render-basic/lib/include/: bresenham.hpp  ppm.hpp  types.hpp
04-render-basic/lib/src/: bresenham.cpp  ppm.cpp
android-project/: local.properties
android-project/app/: build.gradle
android-project/app/src/main/assets/: line.frag  line.vert  triangle.frag
android-project/app/src/main/java/org/libsdl/app/: SDLActivity.java
cmake/modules/: FindGetSDL2.cmake  FindGetSubdirs.cmake  clang-format.cmake
course_assignments/01-hello-lib/: CMakeLists.txt
course_assignments/01-hello-lib/lib/: CMakeLists.txt
course_assignments/01-hello-lib/lib/include/: hello.hpp
course_assignments/02-sdl-link/: CMakeLists.txt  tests.py
course_assignments/03-engine-loop/: CMakeLists.txt  tests.py
course_assignments/03-engine-loop/engine/src/: engine.cpp
course_assignments/03-engine-loop/game/: game.cpp
course_assignments/04-render-basic/: CMakeLists.txt
course_assignments/04-render-basic/04-01-lines/: CMakeLists.txt
course_assignments/04-render-basic/04-01-lines/driver_code/: main.cpp
course_assignments/04-render-basic/04-01-lines/lib/include/: bresenham.hpp  ppm.hpp  random.hpp  types.hpp
course_assignments/04-render-basic/04-01-lines/lib/src/: bresenham.cpp  ppm.cpp
course_assignments/04-render-basic/04-02-triangle/: CMakeLists.txt
course_assignments/04-render-basic/04-02-triangle/driver_code/: main.cpp
course_assignments/04-render-basic/04-02-triangle/lib/src/: renderer.cpp
course_assignments/04-render-basic/04-03-vertex/: CMakeLists.txt
course_assignments/04-render-basic/04-03-vertex/driver_code/: main.cpp
course_assignments/04-render-basic/04-03-vertex/lib/include/: renderer.hpp  triangle_utils.hpp
course_assignments/04-render-basic/04-03-vertex/lib/src/: renderer.cpp
course_assignments/04-render-basic/04-04-interpolated/driver_code/: main.cpp
course_assignments/04-render-basic/04-04-interpolated/lib/include/: triangle.hpp
course_assignments/04-render-basic/04-04-interpolated/lib/src/: triangle.cpp
course_assignments/04-render-basic/04-05-sdl-render/: main.cpp
engine/include/: engine.hpp  shaders.hpp  stb_image.h
engine/src/: engine.cpp  shaders.cpp
game/: main.cpp
game/include/: pieces.hpp  tetris.hpp  types.hpp
game/src/: I.cpp  J.cpp  L.cpp  O.cpp  S.cpp  T.cpp  Z.cpp  input.cpp  rendering.cpp  tetris.cpp  types.cpp
hello-lib/: CMakeLists.txt  tests.py
hello-lib/lib/: CMakeLists.txt
hello-lib/lib/include/: hello.hpp
hello-lib/lib/src/: hello.cpp
matrix/include/: matrix.hpp
